# snake

./: .gitignore  CMakeLists.txt  README.md  highscores.json.example
assets/fonts/: README.txt
assets/sounds/: README.txt
src/: AudioManager.cpp  AudioManager.h  Constants.h  Food.cpp  Food.h  Game.cpp  Game.h  HighScoreManager.cpp  HighScoreManager.h  InputManager.cpp  InputManager.h  Menu.cpp  Menu.h  Renderer.cpp  Renderer.h  Snake.cpp  Snake.h  main.cpp
